# oak-curriculum-ontology

./: .env.example  .gitignore  .htaccess  .pre-commit-config.yaml  CITATION.cff  CODE-LICENSE.md  CONTRIBUTING.md  DATA-LICENSE.md  LICENSE  LICENSE-CODE  LICENSE-CODE.md  LICENSE-DATA  LICENSE.md  README.md  SECURITY.md  fix_sequence_positions.py  main.py  oak-curriculum-full.ttl  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: README.md  generate-distributions.yml  generate-docs-widoco.yml  link-check.yml  lint.yml  validate-ontology.yml
data/: programme-structure.ttl  temporal-structure.ttl  threads.ttl
data/subjects/art-and-design/: art-and-design-key-stage-1.ttl  art-and-design-key-stage-2.ttl  art-and-design-key-stage-3.ttl  art-and-design-key-stage-4.ttl  art-and-design-knowledge-taxonomy.ttl  art-and-design-programme-structure.ttl
data/subjects/biology/: biology-key-stage-4.ttl  biology-key-stage-4.ttx  biology-knowledge-taxonomy.ttl  biology-programme-structure.ttl
data/subjects/chemistry/: chemistry-key-stage-4.ttl  chemistry-key-stage-4.ttx  chemistry-knowledge-taxonomy.ttl  chemistry-programme-structure.ttl
data/subjects/citizenship/: citizenship-key-stage-3.ttl  citizenship-key-stage-3.ttx  citizenship-key-stage-4.ttl  citizenship-key-stage-4.ttx  citizenship-knowledge-taxonomy.ttl  citizenship-programme-structure.ttl
data/subjects/computing/: computing-key-stage-1.ttl  computing-key-stage-2.ttl  computing-key-stage-3.ttl  computing-key-stage-4.ttl  computing-knowledge-taxonomy.ttl  computing-programme-structure.ttl
data/subjects/design-and-technology/: cooking-nutrition-key-stage-1.ttl  cooking-nutrition-key-stage-2.ttl  cooking-nutrition-key-stage-3.ttl  design-and-technology-key-stage-1.ttl  design-and-technology-key-stage-2.ttl  design-and-technology-key-stage-3.ttl  design-and-technology-key-stage-4.ttl  design-and-technology-knowledge-taxonomy.ttl  design-and-technology-programme-structure.ttl
data/subjects/english/: english-key-stage-1.ttl  english-key-stage-1.ttx  english-key-stage-2.ttl  english-key-stage-2.ttx  english-key-stage-3.ttl  english-key-stage-3.ttx  english-key-stage-4.ttl  english-key-stage-4.ttx  english-knowledge-taxonomy.ttl  english-programme-structure.ttl
data/subjects/geography/: geography-key-stage-1.ttl  geography-key-stage-1.ttx  geography-key-stage-2.ttl  geography-key-stage-2.ttx  geography-key-stage-3.ttl  geography-key-stage-3.ttx  geography-key-stage-4.ttl  geography-key-stage-4.ttx  geography-knowledge-taxonomy.ttl  geography-programme-structure.ttl
data/subjects/history/: history-key-stage-1.ttl  history-key-stage-1.ttx  history-key-stage-2.ttl  history-key-stage-2.ttx  history-key-stage-3.ttl  history-key-stage-3.ttx  history-key-stage-4.ttl  history-key-stage-4.ttx  history-knowledge-taxonomy.ttl  history-programme-structure.ttl
data/subjects/languages/: french-key-stage-2.ttl  french-key-stage-3.ttl  french-key-stage-4.ttl  german-key-stage-3.ttl  german-key-stage-4.ttl  languages-knowledge-taxonomy.ttl  languages-programme-structure.ttl  spanish-key-stage-2.ttl  spanish-key-stage-3.ttl  spanish-key-stage-4.ttl
data/subjects/mathematics/: mathematics-key-stage-1.ttl  mathematics-key-stage-1.ttx  mathematics-key-stage-2.ttl  mathematics-key-stage-2.ttx  mathematics-key-stage-3.ttl  mathematics-key-stage-3.ttx  mathematics-key-stage-4.ttl  mathematics-key-stage-4.ttx  mathematics-knowledge-taxonomy.ttl  mathematics-programme-structure.ttl
data/subjects/music/: music-key-stage-1.ttl  music-key-stage-2.ttl  music-key-stage-3.ttl  music-key-stage-4.ttl  music-knowledge-taxonomy.ttl  music-programme-structure.ttl
data/subjects/physical-education/: physical-education-key-stage-1.ttl  physical-education-key-stage-2.ttl  physical-education-key-stage-3.ttl  physical-education-key-stage-4.ttl  physical-education-knowledge-taxonomy.ttl  physical-education-programme-structure.ttl
data/subjects/physics/: physics-key-stage-4.ttl  physics-key-stage-4.ttx  physics-knowledge-taxonomy.ttl  physics-programme-structure.ttl
data/subjects/science/: biology-key-stage-4.ttl  biology-knowledge-taxonomy.ttl  biology-programme-structure.ttl  chemistry-key-stage-4.ttl  chemistry-knowledge-taxonomy.ttl  chemistry-programme-structure.ttl  combined-science-key-stage-4.ttl  combined-science-programme-structure.ttl  physics-key-stage-4.ttl  physics-knowledge-taxonomy.ttl  physics-programme-structure.ttl  science-key-stage-1.ttl  (+4 more)
docs/: export-to-neo4j.md  property-graph-format.md  standards-compliance.md  validation.md
oak_curriculum/: __init__.py
ontology/: oak-curriculum-constraints.ttl  oak-curriculum-ontology.ttl
scripts/: README.md  build-static-data.sh  build_static_data.sh  check_readme_examples.py  check_version_consistency.py  export_to_neo4j.py  export_to_neo4j_ARCHITECTURE.md  export_to_neo4j_config.json  generate_distribution_summary.py  generate_pg_jsonl.py  generate_sql_schema.py  load_rdf_to_postgres.py  load_rdf_to_sqlite.py  merge_ttls_with_imports.py  rdf_loader.py  test_pg_jsonl.py  test_sparql_queries.py  validate.sh  validate_pg_jsonl.py
(+11 files in other folders)
