[project]
name = "oak-curriculum-ontology"
version = "0.1.0"
description = "Oak National Academy Curriculum Ontology - A formal semantic representation of the UK National Curriculum"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "CC0-1.0"}
authors = [
    {name = "Oak National Academy"}
]
keywords = ["ontology", "curriculum", "education", "rdf", "semantic-web", "shacl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "rdflib>=7.5.0",
    "pyshacl>=0.31.0",
    "rdflib-neo4j>=0.6.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
